--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,11 @@ section.main {
 
 .mockup img {
     max-width: 100%;
+    width: 600px;
 }
 
 section.marcas {
-    padding: 200px 0;
+    padding: 0 0 200px 0;
 }
 
 section.marcas > .center > h2 {
